Blender crash when Circle Select tool while I`m on Clipping Border view #51538

Closed
opened 2017-05-17 20:45:38 +02:00 by Marcelievsky · 6 comments

{F601347}System Information
Microsoft Windows 10 Home built 15063

Blender Version
Broken: 2.78c

When I in Weight Paint mode, Blender crash when I try to use Circle Select tool while I`m on Clipping Border view

Exact steps for others to reproduce the error
1- Open the crash.blend file attached
2- The 3D Window already shows the model related in Border View (shortcut Alt+B)
3- Select the Circle Selection tool (shortcut C) and try to select some vertex (in Vertex Masking mode on)
4- Crash occurs

{[F601347](https://archive.blender.org/developer/F601347/crash.blend)}**System Information** Microsoft Windows 10 Home built 15063 **Blender Version** Broken: 2.78c When I in Weight Paint mode, Blender crash when I try to use Circle Select tool while I`m on Clipping Border view **Exact steps for others to reproduce the error** 1- Open the crash.blend file attached 2- The 3D Window already shows the model related in Border View (shortcut Alt+B) 3- Select the Circle Selection tool (shortcut C) and try to select some vertex (in Vertex Masking mode on) 4- Crash occurs
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MarcelievskyRomanenko

Added subscriber: @MarcelievskyRomanenko

Added subscriber: @dfelinto

Added subscriber: @dfelinto

The "priority" and triaging process is reserved to the development team. We leave a task as "Needs Triage" until a developer can reproduce it with the info provided.

The "priority" and triaging process is reserved to the development team. We leave a task as "Needs Triage" until a developer can reproduce it with the info provided.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 102394a323

This issue was referenced by 102394a323bd3d6cfe5166380f6ab74c8c693024
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51538
No description provided.