Fix T51538: Weight-paint circle select w/ clipping